--- a/VersaCraft Launcher/MainWindow.xaml
+++ b/VersaCraft Launcher/MainWindow.xaml
@@ -13,8 +13,8 @@
                 <Button x:Name="login" Content="Login" Margin="699,0,0,4" Height="44" VerticalAlignment="Bottom" Click="Login_Click" TabIndex="102"/>
                 <TextBox x:Name="username" Margin="574,0,80,28" TextWrapping="Wrap" TextChanged="Username_TextChanged" Height="20" VerticalAlignment="Bottom" GotFocus="Username_GotFocus" TabIndex="100"/>
                 <CheckBox x:Name="isSavingPassword" Content="Save password" Margin="0,0,205,4" Height="15" VerticalAlignment="Bottom" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Checked="IsSavingPassword_Checked" Unchecked="IsSavingPassword_Unchecked" TabIndex="103"/>
-                <ProgressBar x:Name="updateBar" Margin="0,0,0,28" Value="35" HorizontalAlignment="Left" Width="560" Height="20" VerticalAlignment="Bottom" Background="#FFEEEEEE" Foreground="#FF00FFE8" BorderBrush="#FF00FFE8"/>
-                <Label x:Name="status" Content="Downloading 1.16.2\servers.dat" HorizontalAlignment="Left" Margin="0,24,0,0" VerticalAlignment="Top" Padding="2"/>
+                <ProgressBar x:Name="updateBar" Margin="0,0,0,28" HorizontalAlignment="Left" Width="560" Height="20" VerticalAlignment="Bottom" Background="#FFEEEEEE" Foreground="#FF00FFE8" BorderBrush="#FF00FFE8"/>
+                <Label x:Name="status" Content="Ready" HorizontalAlignment="Left" Margin="0,24,0,0" VerticalAlignment="Top" Padding="2"/>
                 <PasswordBox x:Name="password" Margin="574,29,80,0" VerticalAlignment="Top" Height="20" PasswordChanged="Password_PasswordChanged" GotFocus="Password_GotFocus" TabIndex="101"/>
                 <ComboBox x:Name="clients" HorizontalAlignment="Left" Margin="320,28,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="Clients_SelectionChanged" TabIndex="104"/>
             </Grid>
